white spacing fix

--- a/projects/mainProject/dev/allstyles.css
+++ b/projects/mainProject/dev/allstyles.css
@@ -279,7 +279,6 @@ p {
 	vertical-align: middle;
 }
 .intrested .column .padder{
-	padding: 0  0 0 10px;
 	color: #333!important;
 }
 .intrested a{
@@ -322,7 +321,6 @@ p {
 
 .intresting-thing .padder{
 	color: #333!important;
-	padding-left: 20px;
 }
 .intresting-thing img{
 	vertical-align: middle;
