--- a/projects/mainProject/dev/css/custom.css
+++ b/projects/mainProject/dev/css/custom.css
@@ -113,7 +113,6 @@
 	vertical-align: middle;
 }
 .intrested .column .padder{
-	padding: 0  0 0 10px;
 	color: #333!important;
 }
 .intrested a{
@@ -156,7 +155,6 @@
 
 .intresting-thing .padder{
 	color: #333!important;
-	padding-left: 20px;
 }
 .intresting-thing img{
 	vertical-align: middle;
